# AB_testing_projects

./: README.md  game_design.html  marketing_campaign.html  pyproject.toml  ruff.toml
src/: dashboard.py
src/game_design/: main.ipynb
src/marketing_campaign/: main.ipynb
