[tool.poetry]
name = "ab_testing"
version = "0.1.0"
description = ""
authors = ["Justinas"]
readme = "README.md"
package-mode = true
packages = [
    { include = "marketing_campaign", from = "src" },
    { include = "game_design", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
kagglehub = "^0.3.10"
streamlit = "^1.44.1"
scipy = "^1.15.2"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
poetry = "^2.1.1"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"